--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3>E-Commerce Website</h3>
+                        <h3>Incanto Dynamics</h3>
                         <p>A fully responsive e-commerce platform built with React and Node.js, featuring user authentication and payment integration.</p>
                         <div class="project-tech">
                             <span class="tech-tag">React</span>
@@ -111,7 +111,7 @@
                             <span class="tech-tag">MongoDB</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
+                            <a href="https://incantodynamics.com/" class="project-link">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                             <a href="#" class="project-link">
@@ -185,15 +185,17 @@
                     <div class="contact-details">
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>your.email@example.com</span>
+                            <span>brian.incanto@gmail.com</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
-                            <span>+1 (555) 123-4567</span>
+                            <span>+91-99721 09254</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Your City, Country</span>
+                            <span>Incanto Dynamics, 373, 1st floor, 2nd Phase, West of Chord Road,
+                            86, Rajajinagar, Bengaluru, Karnataka, India - 560086
+                            </span>
                         </div>
                     </div>
                     <div class="social-links">
