--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </div>
                     <div class="project-content">
                         <h3>Incanto Dynamics</h3>
-                        <p>A fully responsive e-commerce platform built with React and Node.js, featuring user authentication and payment integration.</p>
+                        <p> At Incanto Dynamics we specialize in automation project development, training, and research in PLC programming and industrial robotics. Our mission is to make industrial automation accessible to all, from aspiring engineers to seasoned professionals. Backed by global industry experts with real-world experience, we offer practical, hands-on guidance to help you excel in this evolving field.</p>
                         <div class="project-tech">
                             <span class="tech-tag">React</span>
                             <span class="tech-tag">Node.js</span>
@@ -128,15 +128,15 @@
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3>Mobile App UI</h3>
-                        <p>A modern mobile application interface designed with user experience in mind, featuring smooth animations and intuitive navigation.</p>
+                        <h3>Digital Maven</h3>
+                        <p>At Digital Maven, we are more than just a training institute; we are a community dedicated to nurturing talent in Digital marketing, AI and Data Analytics landscape. Our mission is to empower individuals and businesses to thrive through innovative training and real-world applications.</p>
                         <div class="project-tech">
                             <span class="tech-tag">Figma</span>
                             <span class="tech-tag">React Native</span>
                             <span class="tech-tag">TypeScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
+                            <a href="https://digitalmaven.co.in/" class="project-link">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                             <a href="#" class="project-link">
@@ -153,15 +153,15 @@
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3>Analytics Dashboard</h3>
-                        <p>A comprehensive analytics dashboard with real-time data visualization and interactive charts for business insights.</p>
+                        <h3>Aro labs</h3>
+                        <p>We are an AI Lab that builds smart, real-world solutions for businesses of all sizes. From SaaS to custom agents, we deliver AI that’s easy to use, built fast, and made to scale.</p>
                         <div class="project-tech">
                             <span class="tech-tag">Vue.js</span>
                             <span class="tech-tag">D3.js</span>
                             <span class="tech-tag">Python</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
+                            <a href="https://arolabs.ai/" class="project-link">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
                             <a href="#" class="project-link">
