--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     </section>
 
     <!-- About Section -->
+    <!--
     <section id="about" class="about">
         <div class="container">
             <h2 class="section-title">About Me</h2>
@@ -90,11 +91,11 @@
             </div>
         </div>
     </section>
-
+    -->
     <!-- Projects Section -->
     <section id="projects" class="projects">
         <div class="container">
-            <h2 class="section-title">My Projects</h2>
+            <h2 class="section-title">Companies Currently Working For</h2>
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
@@ -102,7 +103,7 @@
                     </div>
                     <div class="project-content">
                         <h3>Incanto Dynamics</h3>
-                        <p> At Incanto Dynamics we specialize in automation project development, training, and research in PLC programming and industrial robotics. Our mission is to make industrial automation accessible to all, from aspiring engineers to seasoned professionals. Backed by global industry experts with real-world experience, we offer practical, hands-on guidance to help you excel in this evolving field.</p>
+                        <p> At Incanto Dynamics, we specialise in automation project development, training, and research in PLC programming and industrial robotics. Our mission is to make industrial automation accessible to all, from aspiring engineers to seasoned professionals.</p>
                         <div class="project-tech">
                             <span class="tech-tag">React</span>
                             <span class="tech-tag">Node.js</span>
