--- a/index.html
+++ b/index.html
@@ -104,17 +104,19 @@
                     <div class="project-content">
                         <h3>Incanto Dynamics</h3>
                         <p> At Incanto Dynamics, we specialise in automation project development, training, and research in PLC programming and industrial robotics. Our mission is to make industrial automation accessible to all, from aspiring engineers to seasoned professionals.</p>
+                          <!--
                         <div class="project-tech">
                             <span class="tech-tag">React</span>
                             <span class="tech-tag">Node.js</span>
                             <span class="tech-tag">MongoDB</span>
                         </div>
+                        -->
                         <div class="project-links">
                             <a href="https://incantodynamics.com/" class="project-link">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
-                            <a href="#" class="project-link">
-                                <i class="fab fa-github"></i> GitHub
+                            <a href="https://drive.google.com/file/d/1qx-K7p92E4jcinxr3PstF3UyM12RqrB6/view?usp=sharing" class="project-link">
+                                <i class="fab fa-github"></i> Brochure
                             </a>
                         </div>
                     </div>
@@ -127,17 +129,19 @@
                     <div class="project-content">
                         <h3>Digital Maven</h3>
                         <p>At Digital Maven, we are more than just a training institute; we are a community dedicated to nurturing talent in Digital marketing, AI and Data Analytics landscape. Our mission is to empower individuals and businesses to thrive through innovative training and real-world applications.</p>
+                          <!--
                         <div class="project-tech">
                             <span class="tech-tag">Figma</span>
                             <span class="tech-tag">React Native</span>
                             <span class="tech-tag">TypeScript</span>
                         </div>
+                        -->
                         <div class="project-links">
                             <a href="https://digitalmaven.co.in/" class="project-link">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
-                            <a href="#" class="project-link">
-                                <i class="fab fa-github"></i> GitHub
+                            <a href="https://drive.google.com/file/d/12xueZ68t0gyzQTpBJja5LGdsD2JZKgRi/view?usp=sharing" class="project-link">
+                                <i class="fab fa-github"></i> Brochure
                             </a>
                         </div>
                     </div>
@@ -150,11 +154,13 @@
                     <div class="project-content">
                         <h3>Aro labs</h3>
                         <p>We are an AI Lab that builds smart, real-world solutions for businesses of all sizes. From SaaS to custom agents, we deliver AI that’s easy to use, built fast, and made to scale.</p>
+                          <!--
                         <div class="project-tech">
                             <span class="tech-tag">Vue.js</span>
                             <span class="tech-tag">D3.js</span>
                             <span class="tech-tag">Python</span>
                         </div>
+                        -->
                         <div class="project-links">
                             <a href="https://arolabs.ai/" class="project-link">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
