--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="hero-image">
                 <div class="image-placeholder">
-                    <i class="fas fa-user"></i>
+                     <img src="https://photos.app.goo.gl/uxo9ozaJL7qSw4Ct6">
                 </div>
             </div>
         </div>
