--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="hero-image">
                 <div class="image-placeholder">
-                     <img src="https://photos.app.goo.gl/uxo9ozaJL7qSw4Ct6">
+                     <img src="https://lh3.googleusercontent.com/pw/AP1GczNkt4sMWPfUV3l2YbAn6cn_U_KRYGhuTBIa0vCORoxhdnHM7BparCq4MWzoEUbLb4p6w-mCP8wwcaw1R8ReWcCn20fDjzfs4lHEx0ozDe_wnyUf3XjP-opyxaUADM7Y_HeMxjIZZXzGIkFDtwFhOamGzw=w443-h591-s-no-gm?authuser=0">
                 </div>
             </div>
         </div>
