--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         -->
                         <div class="project-links">
                             <a href="https://incantodynamics.com/" class="project-link">
-                                <i class="fas fa-external-link-alt"></i> Live Demo
+                                <i class="fas fa-external-link-alt"></i> Website
                             </a>
                             <a href="https://drive.google.com/file/d/1qx-K7p92E4jcinxr3PstF3UyM12RqrB6/view?usp=sharing" class="project-link">
                                 <i class="fab fa-github"></i> Brochure
@@ -138,7 +138,7 @@
                         -->
                         <div class="project-links">
                             <a href="https://digitalmaven.co.in/" class="project-link">
-                                <i class="fas fa-external-link-alt"></i> Live Demo
+                                <i class="fas fa-external-link-alt"></i> Website
                             </a>
                             <a href="https://drive.google.com/file/d/12xueZ68t0gyzQTpBJja5LGdsD2JZKgRi/view?usp=sharing" class="project-link">
                                 <i class="fab fa-github"></i> Brochure
@@ -163,11 +163,13 @@
                         -->
                         <div class="project-links">
                             <a href="https://arolabs.ai/" class="project-link">
-                                <i class="fas fa-external-link-alt"></i> Live Demo
+                                <i class="fas fa-external-link-alt"></i> Website
                             </a>
+                             <!--
                             <a href="#" class="project-link">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
+                            -->
                         </div>
                     </div>
                 </div>
